--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<title></title>
 		<!-- 引入样式 -->
-    <link rel="stylesheet" type="text/css" href="css/site.css"/>
+    <link rel="stylesheet" type="text/css" href="static/css/common.css"/>
     <!-- 引入图片预览 SDK -->
     <link rel="stylesheet" type="text/css" href="lib/resource/viewer/viewer.css"/>
     <script src="lib/resource/viewer/viewer.js" type="text/javascript" charset="utf-8"></script>
