--- a/test.html
+++ b/test.html
@@ -18,6 +18,7 @@
         display: inline-block;
         border: 1px solid #ccc;
         padding: .5em;
+        margin-right: 1em;
       }
       .navbar > *:hover {
         cursor: pointer;
